# auto_applyer

./: .gitignore  Dockerfile  FEATURE_PROPOSAL.md  README.md  algo-trading-cover.md  algo-trading-resume.md  app.js  app_test_01.js  application-strategy.md  index.html  main.py  pyproject.toml  quant-analyst-cover.md  quant-analyst-resume.md  setup.sh  style.css  wealthtech-pm-cover.md  wealthtech-pm-resume.md
api/: server.py
core/: llm_utils.py  provider.py  qa_engine.py  tracker.py
data/: questions.yml
providers/: greenhouse.py  indeed.py  linkedin.py
templates/: cover_letter_prompt.j2  resume_prompt.j2
tests/: test_cli.py  test_llm_utils.py  test_providers.py  test_tracker.py
