[tool.poetry]
name = "auto_applyer"
version = "0.1.0"
description = "Job application automation tool"
authors = ["nobody"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "*"
typer = "*"
openai = "*"
requests = "*"
beautifulsoup4 = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
ruff = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
